correct spacing in places text

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,5 @@
 .cover__title {
   font-size: 72px;
-  font-weight: 900px;
   line-height: 1.06;
   margin-bottom: 0 0 32px;
 }
